changed enum key for json print + chenged http status for login